add text clean repo

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,7 +2,7 @@
   "trailingComma": "es5",
   "tabWidth": 2,
   "semi": false,
-  "singleQuote": true,
+  "singleQuote": false,
   "endOfLine": "lf",
-  "printWidth": 150
+  "printWidth": 90
 }
