--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-./.idea
+
+.idea
+
+.env
 
 # dependencies
-./node_modules
+/node_modules
 /.pnp
 .pnp.js
 
@@ -10,7 +13,7 @@
 /coverage
 
 # production
-./build
+/build
 
 # misc
 .DS_Store
